change inbox location + fix input's style on mobile devices

--- a/styles/componets/_chatInput.scss
+++ b/styles/componets/_chatInput.scss
@@ -38,3 +38,18 @@
     }
   }
 }
+
+@media screen and (max-width: 768px) {
+  .inbox__message__input {
+    flex-direction: column;
+    align-items: center;
+    width: 100%;
+
+    button {
+      width: 100px;
+      padding: 1em 0;
+      margin-top: 1rem;
+    }
+  }
+}
+  
